# pottendo-mandel

./: .gitignore  CMakeLists.txt  README.md  c64-lib.cpp  mandel-amiga.cpp  mandel-arch.h  mandel-luckfox.cpp  mandel-pico.cpp  mandel.cpp  mandelbrot.h  mandellib.c  mandellib.h
esp32/: .gitignore  platformio.ini  pottendo-mandel
esp32/src/: User_Setup.h  esp32-mandel.cpp
